internal/gatewayapi/testdata/httproute-with-direct-response.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.envoyproxy.io"
      allowedRoutes:
        namespaces:
          from: All
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: direct-response
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: http
    rules:
    - matches:
      - path:
          type: PathPrefix
          value: /inline
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.envoyproxy.io
          kind: HTTPRouteFilter
          name: direct-response-inline
    - matches:
      - path:
          type: PathPrefix
          value: /value-ref
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.envoyproxy.io
          kind: HTTPRouteFilter
          name: direct-response-value-ref
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: direct-response-with-value-not-found
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: http
    rules:
    - matches:
      - path:
          type: PathPrefix
          value: /value-ref-not-found
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.envoyproxy.io
          kind: HTTPRouteFilter
          name: direct-response-value-ref-not-found
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: direct-response-too-long
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: http
    rules:
    - matches:
      - path:
          type: PathPrefix
          value: /too-long
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.envoyproxy.io
          kind: HTTPRouteFilter
          name: direct-response-too-long
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: direct-response-max-size
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: http
    rules:
    - matches:
      - path:
          type: PathPrefix
          value: /max-size
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.envoyproxy.io
          kind: HTTPRouteFilter
          name: direct-response-max-size
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: direct-response-binary
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: http
    rules:
    - matches:
      - path:
          type: PathPrefix
          value: /logo
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.envoyproxy.io
          kind: HTTPRouteFilter
          name: direct-response-binary-logo
configMaps:
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: value-ref-response
    namespace: default
  data:
    response.body: '{"error": "Internal Server Error"}'
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: logo-binary-data
    namespace: default
  binaryData:
    logo.png: iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mNkYPhfDwAChwGA60e6kgAAAABJRU5ErkJggg==
httpFilters:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: HTTPRouteFilter
  metadata:
    name: direct-response-inline
    namespace: default
  spec:
    directResponse:
      contentType: text/plain
      body:
        type: Inline
        inline: "OK"
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: HTTPRouteFilter
  metadata:
    name: direct-response-value-ref-not-exit
    namespace: default
  spec:
    directResponse:
      contentType: application/json
      statusCode: 502
      body:
        type: ValueRef
        valueRef:
          group: ""
          kind: ConfigMap
          name: value-ref-does-not-exist
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: HTTPRouteFilter
  metadata:
    name: direct-response-value-ref
    namespace: default
  spec:
    directResponse:
      contentType: application/json
      statusCode: 502
      body:
        type: ValueRef
        valueRef:
          group: ""
          kind: ConfigMap
          name: value-ref-response
      header:
        add:
        - name: X-Add-Header
          value: "added-502"
        set:
        - name: X-Set-Header
          value: "set-502"
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: HTTPRouteFilter
  metadata:
    name: direct-response-too-long
    namespace: default
  spec:
    directResponse:
      contentType: text/plain
      body:
        type: Inline
        inline: "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- [...]
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: HTTPRouteFilter
  metadata:
    name: direct-response-max-size
    namespace: default
  spec:
    directResponse:
      contentType: text/plain
      body:
        type: Inline
        inline: "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- [...]
        maxSize: 40960 # 40KB
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: HTTPRouteFilter
  metadata:
    name: direct-response-binary-logo
    namespace: default
  spec:
    directResponse:
      contentType: image/png
      statusCode: 502
      body:
        type: ValueRef
        valueRef:
          group: ""
          kind: ConfigMap
          name: logo-binary-data
